# kernel

./: Cargo.toml  LICENSE
crates/sc/src/: lib.rs
crates/sc/src/platform/linux-aarch64/: mod.rs  nr.rs
crates/sc/src/platform/linux-x86_64/: mod.rs
crates/x2apic-rs/src/: lib.rs
crates/x2apic-rs/src/lapic/: mod.rs
src/: gdt.rs  klog.rs  lib.rs  serial.rs  smp.rs
src/acpi/: apic.rs  hpet.rs  mod.rs
src/fs/: mod.rs  operation.rs  user.rs
src/fs/vfs/: acpi.rs  fb.rs  inode.rs  mod.rs  pipe.rs  root.rs  stat_struct.rs
src/irq/: mod.rs
src/memory/: kernel_heap.rs  manager.rs  mod.rs  page_table.rs
src/module/: mod.rs
src/syscall/: mod.rs  op.rs  ret_syscall.S  syscall.S
src/task/: context.rs  mod.rs  process.rs  scheduler.rs  thread.rs  timer.rs
