cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[dependencies]
acpi = "5.1.0"
bit_field = "0.10.2"
bitflags = "2.8.0"
derive-where = "1.2.7"
good_memory_allocator = "0.1.7"
humansize = "2.1.3"
limine = "0.3.1"
log = "0.4.25"
spin = "0.9.8"
uart_16550 = "0.3.2"
x86 = "0.52.0"
x86_64 = "0.15.2"

[dependencies.x2apic]
path = "crates/x2apic-rs"

[dependencies.redox_syscall]
version = "0.5.8"
default-features = false

[dependencies.object]
version = "0.36.7"
features = ["read_core", "elf", "unaligned"]
default-features = false
